# motif-rs

./: Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
benches/: euclidean_bench.rs
examples/: aamp.rs  ab_join.rs  anomaly_detection.rs  basic_matrix_profile.rs  chains.rs  mass_matching.rs  motif_discovery.rs  mpdist.rs  multidimensional.rs  ostinato.rs  pnorm.rs  scrump.rs  segmentation.rs  snippets.rs  stimp.rs  streaming.rs  topk.rs  validation_runner.rs
scripts/: generate_golden_data.py  generate_golden_features.py
src/: lib.rs
src/algorithms/: ab_join.rs  chains.rs  common.rs  fluss.rs  mass.rs  mdl.rs  mmotifs.rs  mod.rs  motifs.rs  mpdist.rs  mstump.rs  ostinato.rs  pnorm.rs  scrump.rs  snippets.rs  stampi.rs  stimp.rs  stomp.rs  subspace.rs  topk.rs
src/core/: distance_metric.rs  matrix_profile.rs  mod.rs
src/metrics/: absolute.rs  euclidean.rs  mod.rs
tests/: features_golden_test.rs  stampi_golden_test.rs  stomp_golden_test.rs
tests/golden_data/: aamp_sine_wave.json  ab_join_sine_square.json  chains_sine_wave.json  discords_synthetic.json  fluss_regime_change.json  match_sine_wave.json  mdl_multi_dim.json  mixed_signal_mp.json  mmotifs_multi_dim.json  motifs_synthetic.json  mpdist_sine_mixed.json  mstump_multi_dim.json  ostinato_consensus.json  pnorm_ab_join_p1.json  pnorm_p1_manhattan.json  pnorm_p3_cubic.json  scrump_sine_wave.json  sine_wave_mp.json  snippets_multi_regime.json  square_wave_mp.json  stimp_pan_profile.json  streaming_sine_mp.json  subspace_multi_dim.json  topk_sine_wave.json
validation/: PERFORMANCE.md  README.md  benchmark.py  compare_results.py  generate_data.py  run_all.py  run_rust.py  run_stumpy.py
validation/data/: mixed_signal.json  sine_wave.json  square_wave.json  streaming_sine.json
validation/results/: benchmark_raw.json  (+2 more)
(+8 files in other folders)
