[package]
name = "motif-rs"
version = "0.1.0"
edition = "2021"
description = "A modular matrix profile library for time series analysis"
license = "MIT"
repository = "https://github.com/sipemu/motif-rs"
readme = "README.md"
keywords = ["matrix-profile", "time-series", "motif", "anomaly-detection", "stomp"]
categories = ["algorithms", "science"]

[dependencies]
realfft = "3.4"
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
validation = ["serde", "serde_json"]

[dev-dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "validation_runner"
required-features = ["validation"]

[[bench]]
name = "euclidean_bench"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
